--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,11 +1,14 @@
 {
   "dependencies": {
     "com.unity.ai.navigation": "2.0.0",
+    "com.unity.cinemachine": "3.1.0",
     "com.unity.collab-proxy": "2.3.1",
     "com.unity.feature.cinematic": "1.0.0",
     "com.unity.ide.rider": "3.0.28",
     "com.unity.inputsystem": "1.8.2",
+    "com.unity.recorder": "5.1.1",
     "com.unity.render-pipelines.universal": "17.0.3",
+    "com.unity.splines": "2.6.1",
     "com.unity.test-framework": "1.4.4",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
